fixed scroll snapping on safari

--- a/suro-frontend/src/components/molecules/QuestionList/QuestionList.css
+++ b/suro-frontend/src/components/molecules/QuestionList/QuestionList.css
@@ -1,3 +1,3 @@
 .question-list {
-    scroll-snap-align: start;
+    scroll-snap-type: y mandatory;
 }
